Bug 77806 - limit the subject to max 3 lines, for more than that use scrollbars. r=Paenglab  a=wsmwk
This is to ensure the whole message window won't be filled with a super long subject.
Testcase: https://bugzilla.mozilla.org/attachment.cgi?id=32356

--- a/mail/themes/shared/mail/messageHeader.css
+++ b/mail/themes/shared/mail/messageHeader.css
@@ -41,6 +41,10 @@
 
 #expandedsubjectBox {
   font-weight: bold;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
+  overflow-y: auto;
 }
 
 /* ::::: attachment view ::::: */
